--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci || npm i
-      - run: npm run build --if-present
+      - run: npm run gh-pages --if-present
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
